# JobTrackerCLI

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Makefile  README.md  jobtracker
build-cmake/: CMakeCache.txt  JobTrackerCLI  Makefile  cmake_install.cmake  compile_commands.json
docs/: architecture.md
include/: application.h  file.h  menu.h  stats.h
src/: application.c  file.c  main.c  menu.c  stats.c
